--- a/pricing.html
+++ b/pricing.html
@@ -180,12 +180,14 @@
 							</div>
 
 							<div class="price-description">
-								<p>Budding Businesses<br>Building a Brand</p>
+								<p>Building a Budding Brand</p>
 							</div>
 
 						</div>
 
-						<div class="price-btn"> <a href="#" class="default-btn">Buy Now <span></span></a> </div>
+						<div class="price-btn"> <a href="#" class="default-btn">Register and Start Free <span></span></a> </div>
+
+						<p class="price-discount"></p>
 
 						<div class="price-body">
 
@@ -232,9 +234,6 @@
 								<h2 class="total-price"></h2>
 								<br>
 								<span class="price-small-text custom-text"></span>
-								<br>
-								<span class="price-small-text">50% billed up front</span>
-
 							</div>
 
 							<div class="price-description">
@@ -243,17 +242,19 @@
 
 						</div>
 
-						<div class="price-btn"> <a href="#" class="default-btn">Buy Now <span></span></a> </div>
+						<div class="price-btn"> <a href="#" class="default-btn">Register and Start Free <span></span></a> </div>
 
+						<p class="price-discount"></p>
+						
 						<div class="price-body">
 
 							<ul>
 
 								<li><i class="fa fa-check-circle"></i> Free trial (50 calls or 5 days)</li>
 
-								<li><i class="fa fa-check-circle"></i> 5 to 49 Dialing Seats</li>
+								<li><i class="fa fa-check-circle"></i> 5 to 49 Dialing Seats, 1 Admin Seat</li>
 
-								<li><i class="fa fa-check-circle"></i> 1 Admin Seat</li>
+								<li><i class="fa fa-check-circle"></i> 50% up front / 50% in 30 days</li>
 
 								<li><i class="fa fa-check-circle"></i> Administrative Portal</li>
 
@@ -288,8 +289,6 @@
 
 								<h2 class="total-price"></h2>
 								<span class="price-small-text">Contact our sales team</span>
-								<br>
-								<span class="price-small-text">for a custom quote</span>
 							</div>
 
 							<div class="price-description">
@@ -298,7 +297,9 @@
 
 						</div>
 
-						<div class="price-btn"> <a href="#" class="default-btn">Buy Now <span></span></a> </div>
+						<div class="price-btn"> <a href="#" class="default-btn">Register and Start Free <span></span></a> </div>
+
+						<p class="price-discount">Contact us for a custom quote</p>
 
 						<div class="price-body">
 
