--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -223,7 +223,7 @@
 						</div>
 						<div class="row align-items-center">
 							<div class="col-lg-12">
-								<p>Current Commission before Mega Pipelines</p>
+								<p>Average Commission Earned Per Closed Deal</p>
 								<h4 id="first_result"></h4>
 							</div>
 						</div>
