Fixed broken link

--- a/faq.html
+++ b/faq.html
@@ -141,7 +141,7 @@
 
 					<div class="page-title-content">
 
-						<h2>Frequently Ask Question</h2>
+						<h2>Frequently Asked Question</h2>
 
 						<ul>
 
@@ -149,7 +149,7 @@
 
 							</li>
 
-							<li>Faq</li>
+							<li>FAQs</li>
 
 						</ul>
 
@@ -458,7 +458,7 @@
 						<ul class="footer-quick-links">
 							<li><a href="product.html">Product</a></li>
 							<li><a href="pricing.html">Pricing</a></li>
-							<li><a href="faqs.html">FAQs</a></li>
+							<li><a href="faq.html">FAQs</a></li>
 							<li><a href="#">Industries</a></li>
 							<li><a href="#">Register or Sign In</a></li>
 						</ul>
