--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -339,7 +339,7 @@ St. Petersburg, FL 33701, United States</p>
 						<ul class="footer-quick-links">
 							<li><a href="product.html">Product</a></li>
 							<li><a href="pricing.html">Pricing</a></li>
-							<li><a href="faqs.html">FAQs</a></li>
+							<li><a href="faq.html">FAQs</a></li>
 							<li><a href="#">Industries</a></li>
 							<li><a href="#">Register or Sign In</a></li>
 						</ul>
