Fixed learn more href

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 								<div class="banner-btn">
 
-									<a href="about.html" class="default-btn-one">
+									<a href="product.html" class="default-btn-one">
 
                                         Learn More
 
