Fixed links and pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WY7HSPN787"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-WY7HSPN787');
+	</script>
 </head>
 <body>
 	<div class="preloader">
@@ -114,11 +123,11 @@
 								</ul>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link">Login</a>
+								<a href="https://account.megapipelines.com/#/login" class="nav-link">Login</a>
 							</li>
 						</ul>
 						<div class="other-option">
-							<a class="default-btn" href="#">Register <span></span></a>
+							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
 						</div>
 					</div>
 				</nav>
@@ -222,7 +231,7 @@
 
 						<div class="services-btn-link">
 
-							<a href="#0" class="services-link">Learn about our verification process</a>
+							<a href="verification-process.html" class="services-link">Learn about our verification process</a>
 
 						</div>
 
@@ -246,7 +255,7 @@
 
 						<div class="services-btn-link">
 
-							<a href="#0" class="services-link">Learn about our integrated dialer</a>
+							<a href="integrated-dialer.html" class="services-link">Learn about our integrated dialer</a>
 
 						</div>
 
@@ -270,7 +279,7 @@
 
 						<div class="services-btn-link">
 
-							<a href="#0" class="services-link">Learn about our Pricing Plans</a>
+							<a href="pricing.html" class="services-link">Learn about our Pricing Plans</a>
 
 						</div>
 
@@ -1199,7 +1208,7 @@
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="faq.html">FAQs</a></li>
 							<li><a href="#">Industries</a></li>
-							<li><a href="#">Register or Sign In</a></li>
+							<li><a href="https://account.megapipelines.com/#/login">Register or Sign In</a></li>
 						</ul>
 					</div>
 				</div>
