--- a/product.html
+++ b/product.html
@@ -25,6 +25,15 @@
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WY7HSPN787"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-WY7HSPN787');
+	</script>
 </head>
 <body>
 	<div class="preloader">
@@ -114,12 +123,12 @@
 								</ul>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link">Login</a>
+								<a href="https://account.megapipelines.com/#/login" class="nav-link">Login</a>
 							</li>
 						</ul>
 						<div class="other-option">
  
-							<a class="default-btn" href="#">Register <span></span></a>
+							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
 						</div>
 					</div>
 				</nav>
@@ -131,16 +140,109 @@
 			<div class="d-table-cell">
 				<div class="container">
 					<div class="page-title-content">
-						<h2>Product</h2>
+						<h2>Mega Pipelines Product</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li>Product</li>
+							<li>Mega Pipelines Product</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<section class="about-area section-padding">
+
+		<div class="container">
+
+			<div class="row d-flex align-items-center">
+
+				<div class="col-lg-7 col-md-12 col-sm-12">
+
+					<div class="about-content">
+
+						<div class="about-content-text">
+							<h2>Getting <span class="color-text">Started</span></h2>
+							<p><b>|.</b> We curate leads from a number of different sources and then validate them using public records, telephony verification and we scrub it against Do Not Call and other blacklists and known litigators.  We have designed the system so you stay TCPA compliant.</p>
+							<p><b>2.</b> We load those leads into Mega Pipelines as soon as we have them refined via our lead curation process.</p>
+							<p><b>3.</b> We set you up with a phone number that we constantly screen to reassure it doesn’t get marked as a spam caller.</p>
+							<p><b>4.</b> You filter through the leads and focus on the geographic areas, products and specializations that you serve the best.</p>
+							<p><b>5.</b> You start calling with confidence, with no need to set up dialers, or hope that the lead information is accurate.</p>
+							<p><b>6.</b> You win business.</p>
+							<p>We do this for Unlimited Leads and since we have priced this service on a flat cost per month, we made it easier than ever for you to grow your business.</p>
+
+							<p>No risk to start, get 50 free dials for free just by signing up.</p>
+
+							<h2>Ready to <span class="color-text">Scale?</span></h2>
+
+							<p><b>1.</b> Switch from an Individual account to a Team account and save money per Dialer seat.</p>
+							<p><b>2.</b> Hire a Dialer or a team of Dialers to do the calling for you, and design a process for them to transfer you the customers that fit your more specific criteria.</p>
+							<p><b>3.</b> Add additional sales people under your account and become an account Administrator.</p>
+							<p>Once again, Unlimited leads, simple set up, and simple ability to scale.</p>
+							<p>No risk to start, get 50 dials for free just by signing up.</p>
+							<h2>What do you need to <span class="color-text">Get Started?</span></h2>
+							<p>Just a computer, mouse, keyboard, microphone, and a speaker–although we prefer if you have a headset so you can work more rapidly at getting business.</p>
+
+							<p>Have more questions?  Check out our <a href="faq.html">FAQs page</a>, or <a href="contact.html">Contact Us</a>.</p>
+							<a class="default-btn" href="registration.html">
+
+                            Try It Free
+
+                            </a>
+							<p><small>50 free dials are for only 1 Dialer per account.  Users are only permitted to have 1 account.  All users are subject to the Terms and Conditions of the Mega Pipelines product and service.  Adding an additional Dialer forfeits your 50 free dials, and you will automatically become a paid account.</small></p>
+
+						</div>
+
+					</div>
+
+				</div>
+
+				<div class="col-lg-5 col-md-12 col-sm-12">
+
+					<div class="about-image">
+
+						<img src="assets/img/b-12.jpg" alt="About image">
+						<img src="assets/img/b-13.jpg" alt="About image">
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</section>
+
+	<section class="hire-section">
+
+		<div class="container">
+
+			<div class="row">
+
+				<div class="col-lg-8 offset-lg-2 col-md-12">
+
+					<div class="hire-content">
+
+						<h2>Have more questions about growing your sales?</h2>
+
+						<p>Contact us and one of our talented pipeline growth analysts will contact you to help you get started.</p>
+
+						<div class="hire-btn">
+
+							<a class="default-btn-one" href="contact.html">Contact Us <span></span></a>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</section>
 
 	<section class="footer-area section-padding">
 		<div class="container">
@@ -177,7 +279,7 @@
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="faq.html">FAQs</a></li>
 							<li><a href="#">Industries</a></li>
-							<li><a href="#">Register or Sign In</a></li>
+							<li><a href="https://account.megapipelines.com/#/login">Register or Sign In</a></li>
 						</ul>
 					</div>
 				</div>
