--- a/pricing.html
+++ b/pricing.html
@@ -25,6 +25,15 @@
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WY7HSPN787"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-WY7HSPN787');
+	</script>
 </head>
 <body>
 	<div class="preloader">
@@ -114,12 +123,12 @@
 								</ul>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link">Login</a>
+								<a href="https://account.megapipelines.com/#/login" class="nav-link">Login</a>
 							</li>
 						</ul>
 						<div class="other-option">
  
-							<a class="default-btn" href="#">Register <span></span></a>
+							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
 						</div>
 					</div>
 				</nav>
@@ -252,9 +261,9 @@
 
 								<li><i class="fa fa-check-circle"></i> Free trial (50 calls or 5 days)</li>
 
-								<li><i class="fa fa-check-circle"></i> 5 to 49 Dialing Seats, 1 Admin Seat</li>
+								<li><i class="fa fa-check-circle"></i> 5 Dialing + 1 Admin Seat</li>
 
-								<li><i class="fa fa-check-circle"></i> 50% up front / 50% in 30 days</li>
+								<li><i class="fa fa-check-circle"></i> Pay only 50% at purchase</li>
 
 								<li><i class="fa fa-check-circle"></i> Administrative Portal</li>
 
@@ -378,7 +387,7 @@
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="faq.html">FAQs</a></li>
 							<li><a href="#">Industries</a></li>
-							<li><a href="#">Register or Sign In</a></li>
+							<li><a href="https://account.megapipelines.com/#/login">Register or Sign In</a></li>
 						</ul>
 					</div>
 				</div>
