New pricing details

--- a/pricing.html
+++ b/pricing.html
@@ -220,8 +220,6 @@
 
 								<li><i class="fa fa-check-circle"></i> Features First Access</li>
 
-								<li><i class="fa fa-check-circle"></i> Credit card billing</li>
-
 							</ul>
 
 						</div>
@@ -258,8 +256,6 @@
 						<div class="price-body">
 
 							<ul>
-
-								<li><i class="fa fa-check-circle"></i> Free trial (50 calls or 5 days)</li>
 
 								<li><i class="fa fa-check-circle"></i> 5 Dialing + 1 Admin Seat</li>
 
@@ -306,15 +302,13 @@
 
 						</div>
 
-						<div class="price-btn"> <a href="#" class="default-btn">Register and Start Free <span></span></a> </div>
+						<div class="price-btn"> <a href="contact.html" class="default-btn">Contact Us <span></span></a> </div>
 
 						<p class="price-discount">Contact us for a custom quote</p>
 
 						<div class="price-body">
 
 							<ul>
-
-								<li><i class="fa fa-check-circle"></i> Free trial (contact us)</li>
 
 								<li><i class="fa fa-check-circle"></i> 50 to 2,000 Dialing Seats</li>
 
