PHP file removed and link change

--- a/verification-process.html
+++ b/verification-process.html
@@ -253,7 +253,7 @@
 								<a href="#"><i class="fab fa-twitter"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fab fa-pinterest"></i></a>
+								<a href="#"><i class="fab fa-instagram"></i></a>
 							</li>
 							<li>
 								<a href="#"><i class="fab fa-linkedin"></i></a>
@@ -281,7 +281,7 @@
 							<h3>Quick Links</h3>
 						</div>
 						<ul class="footer-quick-links">
-							<li><a href="#">Submit a Ticket</a></li>
+							<li><a href="mailto:support@megapipelines.com">Submit a Ticket</a></li>
 							<li><a href="training-support.html">Training and Support</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
 							<li><a href="privacy-policy.html">Privacy Policy</a></li>
